removed duplicate db entry

--- a/public/views/RegistrationForm.html
+++ b/public/views/RegistrationForm.html
@@ -496,7 +496,7 @@
                             <!-- Form button -->
                             <div class="form-buttons">
                                 <button type="button" class="submit cancel-button" onclick="clearForm()" value="Cancel">Cancel</button>
-                                <input type="submit" class="submit" id="submit" value="Register" onclick="submitForm()">
+                                <input type="submit" class="submit" id="submit" value="Register" >
                                 
                             </div>
                             <span id="registration-text"></span>
